clusters/production/config/routes/nginx-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-wildcard
    - name: external
      namespace: gateway
      sectionName: http-redirect
  hostnames:
    - "test.mill3r.la"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx
          port: 80
      parentRefs:
        - sectionName: https-wildcard
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      parentRefs:
        - sectionName: http-redirect
